--- a/sale_subscription_ux/views/sale_subscription_line_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_line_views.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
 
         <record id="sale_subscription_view_form" model="ir.ui.view">
             <field name="name">sale.subscription.form.inherit</field>
             <field name="model">sale.subscription</field>
-            <field name="inherit_id" ref="sale_contract.sale_subscription_view_form"/>
+            <field name="inherit_id" ref="sale_subscription.sale_subscription_view_form"/>
             <field name="arch" type="xml">
                 <field name="product_id" position="before">
                     <field name="sequence" widget="handle"/>
@@ -13,5 +12,4 @@
             </field>
         </record>
 
-    </data>
 </odoo>
