--- a/sale_subscription_ux/views/sale_subscription_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_views.xml
@@ -20,6 +20,12 @@
                 <field name="journal_id"/>
             </field>
             -->
+            <button name="recurring_invoice" position="after">
+                <button class="oe_link" name="update_lines_prices_from_products" string="⇒ Update Data from Products" type="object"/>
+            </button>
+            <field name="product_id" position="before">
+                <field name="sequence" widget="handle"/>
+            </field>
         </field>
     </record>
 
