--- a/purchase_subscription/views/purchase_subscription_views.xml
+++ b/purchase_subscription/views/purchase_subscription_views.xml
@@ -44,6 +44,7 @@
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="search_view_id" ref="purchase_subscription_view_search"/>
+        <field name="domain">[]</field>
         <field name="context">{'search_default_open':1, 'search_default_pending':1}</field>
     </record>
 
