--- a/helpdesk_solutions/views/helpdesk_ticket_views.xml
+++ b/helpdesk_solutions/views/helpdesk_ticket_views.xml
@@ -17,7 +17,7 @@
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='tag_ids']" position="after">
+            <xpath expr="//field[@name='company_id']" position="after">
                 <field name="helpdesk_solution_id" context="{'default_name':name,'default_solution_description': solution_description,'default_ticket_description':ticket_description}"/>
             </xpath>
             <xpath expr="//sheet/notebook/page[1]" position="before">
@@ -25,13 +25,15 @@
                     <field name="ticket_description" placeholder="Add ticket description..."/>
                     <!-- TODO include? {'default_categ_ids':categ_ids} -->
                 </page>
-                <page string="Solution">
-                    <field name="solution_description" placeholder="Add solution description..."/>
-                </page>
             </xpath>
             <xpath expr="//field[@name='description']/.." position="attributes">
                 <attribute name="string">Internal Description</attribute>
                 <attribute name="groups">base.group_user</attribute>
+            </xpath>
+            <xpath expr="//field[@name='description']/.." position="after">
+                <page string="Solution">
+                    <field name="solution_description" placeholder="Add solution description..."/>
+                </page>
             </xpath>
         </field>
     </record>
