[ADD] sale_subscription_ux: search by analytic account name by default (#95)
Applied t the name_search() and search by name filter.

--- a/sale_subscription_ux/views/sale_subscription_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_views.xml
@@ -29,4 +29,16 @@
         </field>
     </record>
 
+    <record id="sale_subscription_view_search" model="ir.ui.view">
+        <field name="name">sale.subscription.view.search</field>
+        <field name="model">sale.subscription</field>
+        <field name="inherit_id" ref="sale_subscription.sale_subscription_view_search"/>
+        <field name="arch" type="xml">
+            <!-- hacemos este arreglo porque el campo name de odoo no parece tener mucho uso y no se actualiza al cambiar el ref. O sea, casi no tiene sentido que busque por ese name -->
+            <field name="name" position="attributes">
+                <attribute name="filter_domain">['|', '|', ('analytic_account_id', 'ilike', self), ('code', 'ilike', self), ('name', 'ilike', self)]</attribute>
+            </field>
+        </field>
+    </record>
+
 </odoo>
