[ADD] Add new field to not update price when update quantity

--- a/sale_subscription_ux/views/sale_subscription_template_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_template_views.xml
@@ -17,6 +17,7 @@
                 <group>
                     <field name="dates_required"/>
                     <field name="copy_description_to_invoice"/>
+                    <field name="do_not_update_price"/>
                 </group>
             </group>
         </field>
