[MIG] helpdesk_solutions
* [MIG] helpdesk_solutions: several changes and make installable

- Fixed views as the intherited views changed.
- Removed copy field since we can call a field twice in a view.

* [FIX] helpdesk_solutions: add stashed code

* Revert "[FIX] helpdesk_solutions: add stashed code"

This reverts commit 37c1a93be4a454fc20764fe90fd87bd35b3f9c85.

* [MIG] helpdesk_solutions: make installable and changes
- Add string to related field to avoid errors.

--- a/helpdesk_solutions/views/helpdesk_solution_views.xml
+++ b/helpdesk_solutions/views/helpdesk_solution_views.xml
@@ -11,7 +11,7 @@
                 <field name="ticket_description"/>
                 <field name="solution_description"/>
                 <field name="tag_ids"/>
-                <filter string="Followed by Me" domain="[('message_is_follower','=',True)]"/>
+                <filter name="Followed by Me" string="Followed by Me" domain="[('message_is_follower','=',True)]"/>
             </search>
         </field>
     </record>
