[IMP] helpdesk_soltution: add active field

--- a/helpdesk_solutions/views/helpdesk_solution_views.xml
+++ b/helpdesk_solutions/views/helpdesk_solution_views.xml
@@ -12,6 +12,8 @@
                 <field name="solution_description"/>
                 <field name="tag_ids"/>
                 <filter name="Followed by Me" string="Followed by Me" domain="[('message_is_follower','=',True)]"/>
+                <separator/>
+                <filter string="Archived" name="archived" domain="[('active', '=', False)]"/>
             </search>
         </field>
     </record>
@@ -20,10 +22,11 @@
         <field name="name">helpdesk.solution.tree.view</field>
         <field name="model">helpdesk.solution</field>
         <field name="arch" type="xml">
-            <tree string="Solution">
+            <tree decoration-muted="not active">
                 <field name="name"/>
                 <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                 <field name="ticket_count"/>
+                <field name="active" invisible="True"/>
             </tree>
         </field>
     </record>
@@ -37,6 +40,9 @@
                     <div class="oe_button_box" name="button_box" groups="base.group_user">
                         <button class="oe_stat_button" type="action" name="%(helpdesk.helpdesk_ticket_action_main_tree)d" icon="fa-life-ring" context="{'search_default_helpdesk_solution_id': active_id}">
                             <field string="Tickets" name="ticket_count" widget="statinfo"/>
+                        </button>
+                        <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
+                            <field name="active" widget="boolean_button" options='{"terminology": "archive"}'/>
                         </button>
                     </div>
                     <div class="oe_title">
