--- a/helpdesk_ux/views/helpdesk_portal_templates.xml
+++ b/helpdesk_ux/views/helpdesk_portal_templates.xml
@@ -4,14 +4,13 @@
         <t t-set="disable_composer" position="replace"/>
     </template>
     <template id="portal_tickets" name="Portal Tickets Inherit" inherit_id="helpdesk.portal_helpdesk_ticket">
-        <div class="table-responsive" position="replace">
+        <t t-if="tickets" t-call="portal.portal_table" position="replace">
             <t t-foreach="grouped_tickets" t-as="tickets">
                   <table class="table table-hover o_portal_my_doc_table">
                     <thead>
                         <tr class="active">
                             <th t-if="groupby == 'none'" class="col-md-9">Ticket Number</th>
-                            <th t-else="" class="col-md-9">Ticket Number for project: <span t-field="tickets[0].sudo().stage_id.name"/></th>
-                            <!--<th>Description</th><th/>-->
+                            <th t-else="" class="col-md-9">Stage: <span t-field="tickets[0].sudo().stage_id.name"/></th>
                             <th>Status</th>
                         </tr>
                     </thead>
@@ -23,6 +22,6 @@
                     </t>
                 </table>
             </t>
-        </div>
+        </t>
     </template>
 </odoo>
