[REL] sale_subscription_invoice_address merge on _ux and rel on v12 (#154)

--- a/sale_subscription_ux/views/sale_subscription_template_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_template_views.xml
@@ -10,6 +10,7 @@
                 <field name="dates_required"/>
                 <field name="copy_description_to_invoice"/>
                 <field name="do_not_update_price"/>
+                <field name="use_different_invoice_address"/>
             </field>
         </field>
     </record>
