[IMP] hr_timesheet_ux: show description fiel in timesheet form (#155)
Re add the description field in the account.analytic.line, this was in version 11.0 but was removed in version 12.0 from timesheet_grid module.

--- a/hr_timesheet_ux/views/account_analytic_line_views.xml
+++ b/hr_timesheet_ux/views/account_analytic_line_views.xml
@@ -40,6 +40,9 @@
             <field name="task_id" position="attributes">
                 <attribute name="options">{'no_create': True}</attribute>
             </field>
+            <group position="after">
+                <field name="name" nolabel="1" widget="text" placeholder="Describe your activity" colspan="4"/>
+            </group>
         </field>
     </record>
 
