--- a/helpdesk_timesheet_ux/views/project_project_views.xml
+++ b/helpdesk_timesheet_ux/views/project_project_views.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="edit_project" model="ir.ui.view">
-        <field name="name">project.project.form</field>
-        <field name="model">project.project</field>
-        <field name="inherit_id" ref="project.edit_project"/>
-        <field name="arch" type="xml">
+        <record id="edit_project" model="ir.ui.view">
+            <field name="name">project.project.form</field>
+            <field name="model">project.project</field>
+            <field name="inherit_id" ref="project.edit_project"/>
+            <field name="arch" type="xml">
 
-            <button name="toggle_active" position="attributes">
-                <attribute name="confirm">(Un)archiving a project automatically (un)archives its tasks and tickets. Do you want to proceed?</attribute>
-            </button>
+                <button name="toggle_active" position="attributes">
+                    <attribute name="confirm">(Un)archiving a project automatically (un)archives its tasks and tickets. Do you want to proceed?</attribute>
+                </button>
 
-            <xpath expr="//div[@name='options_active']" position="inside">
-                <div>
-                    <field name="allow_tickets" class="oe_inline"/>
-                    <label for="allow_tickets"/>
-                </div>
-            </xpath>
+                <xpath expr="//div[@name='options_active']" position="inside">
+                    <div>
+                        <field name="allow_tickets" class="oe_inline"/>
+                        <label for="allow_tickets"/>
+                    </div>
+                </xpath>
 
-        </field>
-    </record>
+            </field>
+        </record>
 
     <record id="project_project_view_form_inherit_helpdesk_timesheet" model="ir.ui.view">
         <field name="name">project.project.form</field>
@@ -29,6 +29,24 @@
             <xpath expr="//field[@name='ticket_count']/.." position="attributes">
                 <attribute name="attrs">{'invisible': [('allow_tickets', '=', False)]}</attribute>
             </xpath>
+        </field>
+    </record>
+
+    <record id="view_project_kanban" model="ir.ui.view">
+        <field name="name">project.project.kanban</field>
+        <field name="model">project.project</field>
+        <field name="inherit_id" ref="helpdesk_timesheet.project_project_view_project_tickets_kanban_inherited"/>
+        <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="ticket_count" invisible="1"/>
+            </field>
+            <xpath expr="//div[hasclass('o_project_kanban_boxes')]//field[@name='ticket_count']" position="replace">
+                <div>
+                    <span class="o_value"><t t-esc="record.ticket_count.value"/></span>
+                    <span class="o_label"><span title="Tickets" class="fa fa-life-ring"/></span>
+                </div>
+            </xpath>
+
         </field>
     </record>
 
