[IMP] make aal name not required
Same as it was on v11. It's required by model but if you don't put any value then it will add '/'

--- a/hr_timesheet_ux/views/account_analytic_line_views.xml
+++ b/hr_timesheet_ux/views/account_analytic_line_views.xml
@@ -41,7 +41,7 @@
                 <attribute name="options">{'no_create': True}</attribute>
             </field>
             <group position="after">
-                <field name="name" nolabel="1" widget="text" placeholder="Describe your activity" colspan="4"/>
+                <field name="name" nolabel="1" widget="text" placeholder="Describe your activity" colspan="4" required="0"/>
             </group>
         </field>
     </record>
