[IMP] helpdesk_ux: add a call to paginator (#162)
Ticket No. 22.298:
- On 12.0 view pagination for helpdesk.tickets portal view are removed, so we reincorporate it.

--- a/helpdesk_ux/views/helpdesk_portal_templates.xml
+++ b/helpdesk_ux/views/helpdesk_portal_templates.xml
@@ -23,5 +23,10 @@
                 </table>
             </t>
         </t>
+        <t t-foreach="grouped_tickets" t-as="tickets" position="after">
+            <div t-if="pager" class="o_portal_pager text-center">
+                <t t-call="portal.pager"/>
+            </div>
+        </t>
     </template>
 </odoo>
