--- a/helpdesk_timesheet_ux/views/project_project_views.xml
+++ b/helpdesk_timesheet_ux/views/project_project_views.xml
@@ -5,6 +5,7 @@
             <field name="name">project.project.form</field>
             <field name="model">project.project</field>
             <field name="inherit_id" ref="project.edit_project"/>
+            <field name="arch" type="xml">
                 <xpath expr="//div[@name='options_active']" position="inside">
                     <div>
                         <field name="allow_tickets" class="oe_inline"/>
