--- a/purchase_subscription/views/purchase_subscription_views.xml
+++ b/purchase_subscription/views/purchase_subscription_views.xml
@@ -100,7 +100,7 @@
                                         <field name="purchase_quantity"/>
                                         <field name="uom_id"/>
                                         <field name="price_unit"/>
-                                        <field name="discount" groups="sale.group_discount_per_so_line"/>
+                                        <field name="discount" groups="product.group_discount_per_so_line"/>
                                         <field name="price_subtotal"/>
                                     </tree>
                                 </field>
