[MIG] account_balance_import: Migration to 13.0
[FIX] Adapt multi-company, replace env.user.company_id to env.company
[ADD] new card in the account dashboard to configurate initial balance
[FIX] Alter to the user if found 2 partners with the same name or identification.
[FIX[ another fixes related to this change to version.

--- a/wizards/account_balance_import_wizard.xml
+++ b/wizards/account_balance_import_wizard.xml
@@ -35,7 +35,7 @@
                         <field name="check_journal_third_id" attrs="{'required': [('mode', '=', 'check_balance'), ('check_type', '=', 'third_check')],
                         'invisible': [('check_type', 'not in', 'third_check')] }" />
                         <br/>
-                        <a class="btn btn-link" colspan="4" attrs="{'required': [('mode', '=', 'partner_balance')] }" href="/account_balance_import/static/xls/check_balance.xls">
+                        <a class="btn btn-link" colspan="4" attrs="{'required': [('mode', '=', 'partner_balance')] }" href="/account_balance_import/static/xls/check_balance.xls" role="button">
                             <span class="fa fa-download" title="download"></span>
                             Descargar Plantilla de Importación de Cheques
                         </a>
@@ -47,7 +47,7 @@
                         <h3 colspan="4">Importación de Saldos Contables</h3>
                         <field name="account_opening_entries_journal_id" attrs="{'required': [('mode', '=', 'account_balance')] }" />
                         <br/>
-                        <a class="btn btn-link" colspan="4" attrs="{'required': [('mode', '=', 'account_balance')] }" href="/account_balance_import/generate_xls">
+                        <a class="btn btn-link" colspan="4" attrs="{'required': [('mode', '=', 'account_balance')] }" href="/account_balance_import/generate_xls" role="button">
                             <span class="fa fa-download" title="download"></span>
                             Descargar Plantilla de Importación de Saldos Contables
                         </a>
@@ -60,7 +60,7 @@
                         <field name="partner_balance_journal_id" attrs="{'required': [('mode', '=', 'partner_balance')] }" />
                         <field name="partner_balance_type" attrs="{'required': [('mode', '=', 'partner_balance')] }" />
                         <br/>
-                        <a class="btn btn-link" colspan="4" attrs="{'required': [('mode', '=', 'partner_balance')] }" href="/account_balance_import/static/xls/partner_balance.xls">
+                        <a class="btn btn-link" colspan="4" attrs="{'required': [('mode', '=', 'partner_balance')] }" href="/account_balance_import/static/xls/partner_balance.xls" role="button">
                             <span class="fa fa-download" title="download"></span>
                             Descargar Plantilla de Importación de Saldos de Partners
                         </a>
@@ -84,7 +84,6 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">account_balance_import</field>
         <field name="view_mode">tree,form</field>
-        <field name="view_type">form</field>
         <field name="view_id" ref="account_balance_import_wizard"/>
         <field name="target">new</field>
     </record>
