--- a/helpdesk_solutions/views/helpdesk_ticket_views.xml
+++ b/helpdesk_solutions/views/helpdesk_ticket_views.xml
@@ -5,6 +5,7 @@
         <field name="name">helpdesk.ticket.search</field>
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk.helpdesk_tickets_view_search"/>
+        <field name="priority">20</field>
         <field name="arch" type="xml">
             <field name="partner_id" position="after">
                 <field name="helpdesk_solution_id"/>
@@ -17,9 +18,9 @@
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='company_id']" position="after">
+            <field name="email_cc" position="after">
                 <field name="helpdesk_solution_id" context="{'default_name':name,'default_solution_description': solution_description,'default_ticket_description':ticket_description}"/>
-            </xpath>
+            </field>
             <xpath expr="//sheet/notebook/page[1]" position="before">
                 <page string="Description">
                     <field name="ticket_description" placeholder="Add ticket description..."/>
