--- a/website_doc/views/website_doc_toc_views.xml
+++ b/website_doc/views/website_doc_toc_views.xml
@@ -43,7 +43,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <field name="state" widget="statusbar" clickable="True"/>
+                    <field name="state" widget="statusbar" options="{'clickable': '1'}"/>
                 </header>
                 <sheet>
                 <div class="oe_button_box" name="button_box">
