[IMP] account_online_sync_ar: hide paybook user id from view and widget form for everyone.

--- a/account_online_sync_ar/views/res_company_views.xml
+++ b/account_online_sync_ar/views/res_company_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="base.view_company_form"/>
         <field name="arch" type="xml">
             <field name="sequence" position="after">
-                <field name="paybook_user_id" groups="saas_client.group_saas_support"/>
+                <field name="paybook_user_id" groups="base.group_no_one"/>
             </field>
         </field>
     </record>
